--- a/vue-04.html
+++ b/vue-04.html
@@ -10,30 +10,21 @@
 
 <body>
     <div id="app">
-        style对象语法
-        绑定内联样式：键代表style的属性，值代表属性对应的值
+        v-clock:解决初始化慢导致页面闪动<br>
+        <p v-once>{{msg}}</p>
         <hr>
-        vue中只要是大写字母都会转换成-加小写
-        <div v-bind:style="{'color':color,'fontSize':fontSize+'px'}">哈哈</div>
-        <hr>
-        style数组语法
-        <div v-bind:style="[styleA,styleB]">
-            哈哈哈哈哈哈哈
-        </div>
-
+        v-once:只渲染一次，后续都不会再渲染<br>
+        <span v-once>{{oncedata}}</span>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
         var app = new Vue({
-            el: '#app',
-            data: {
-                color: 'blue',
-                fontSize: 18,
-                styleA: {
-                    color: red,
-                    fontSize: 18px,
-                }
-            },
+            el: "#app",
+            data:{
+                msg: "湖人总冠军",
+                oncedata: "紫金王朝"
+            }
         })
     </script>
 </body>
