--- a/vue.js-07--可复用的组件详解/组件的通信-父组件与子组件.html
+++ b/vue.js-07--可复用的组件详解/组件的通信-父组件与子组件.html
@@ -13,6 +13,9 @@
     <div id="app" style="border: 1px solid chartreuse; height: 160px;">
         <h5 style="text-align: center">我是父组件</h5>
         <child-component msg="我是来自父组件的内容"></child-component>
+        <child-component msg="[3,6,9]"></child-component>
+        <child-component :msg="[3,6,9]"></child-component>
+        //v-bind 使用与否的区别，还可以使用布尔值，对象进行测试
         <hr>
         使用v-bind动态绑定--把input中的msg传递给子组件
         <input type="text" v-model="parentmsg">
