--- a/vue.js-07--可复用的组件详解/在组件中使用v-model.html
+++ b/vue.js-07--可复用的组件详解/在组件中使用v-model.html
@@ -21,7 +21,13 @@
 <body>
     <div id="app">
         您现在的银行卡余额为{{total}}
-        <son-component @change="handleTotal"></son-component>
+        <!--<son-component @change="handleTotal"></son-component>-->
+        <son-component v-model="total"></son-component>
+        v-model其实就是绑定了input事件，当触发input时候，input事件就会自动接收传递过来的参数并赋值给total
+        <hr>
+        v-model其实就是一个语法糖，背后做了两个操作：
+        - v-on指令给当前元素绑定input事件
+        - v-bind绑定了一个value属性
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
@@ -29,7 +35,6 @@
         Vue.component('son-component', {
             template: '<div>\
                 <button @click="handleincrease" >+1000</button >\
-                <button @click="handlereduce" >-1000</button >\
 </div>',
             data: function () {
                 return {
@@ -39,12 +44,9 @@
             methods: {
                 handleincrease: function () {
                     this.count = this.count + 1000;
-                    this.$emit('change', this.count)
+                    // this.$emit('change', this.count)
+                    this.$emit('input', this.count) //这行代码实际会触发一个input事件，'input'后的参数就是传递给v-model绑定的属性值
                 },
-                handlereduce: function () {
-                    this.count = this.count - 1000;
-                    this.$emit('change', this.count)
-                }
             }
         })
         var app = new Vue({
@@ -52,11 +54,11 @@
             data: {
                 total: 2000
             },
-            methods: {
-                handleTotal: function (value) { //value(可传多个参数)为传递过来的数据--this.count
-                    this.total = value //实时更新total
-                }
-            }
+            /*methods: {
+                 handleTotal: function (value) { //value(可传多个参数)为传递过来的数据--this.count
+                  this.total = value //实时更新total
+                 }
+             }*/
         })
     </script>
 </body>
