--- a/vue.js-07--可复用的组件详解/vue实例.html
+++ b/vue.js-07--可复用的组件详解/vue实例.html
@@ -16,7 +16,7 @@
     <script>
         var app = new Vue({
             el: '#app',
-            dataz: {
+            data: {
 
             }
         })
