--- a/vue.js-07--可复用的组件详解/vue实例.html
+++ b/vue.js-07--可复用的组件详解/vue实例.html
@@ -12,13 +12,18 @@
     <div id="app">
 
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
         var app = new Vue({
             el: '#app',
-            data: {
-
-            }
+            data: {}
+        })
+        Vue.component('my-acomponent', {
+            template: '<div>我是一个组件</div>'
+        }),
+        Vue.component('my-bcomponent', {
+            template: '<div>我是一个组件</div>'
         })
     </script>
 </body>
