--- a/vue.js-07--可复用的组件详解/vue实例.html
+++ b/vue.js-07--可复用的组件详解/vue实例.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        #app {
+            border: 5px solid black;
+            height: 200px;
+            width: 600px;
+            text-align: center;
+            margin: 0 auto;
+            margin-top: 100px;
+        }
+    </style>
 </head>
 
 <body>
@@ -15,16 +25,17 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
+        Vue.component('my-acomponent', {
+            template: '<div>我是一个组件</div>'
+        }),
+            Vue.component('my-bcomponent', {
+                template: '<div>我是一个组件</div>'
+            })
         var app = new Vue({
             el: '#app',
             data: {}
         })
-        Vue.component('my-acomponent', {
-            template: '<div>我是一个组件</div>'
-        }),
-        Vue.component('my-bcomponent', {
-            template: '<div>我是一个组件</div>'
-        })
+
     </script>
 </body>
 
